--- a/index.html
+++ b/index.html
@@ -14,11 +14,168 @@
     <a href="#" class="logo">Jaouhar</a>
     <nav class="navigation">
         <a href="#services">Services</a>
-        <a href="#project">Project</a>
+        <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
 
     </nav>
 </header>
+
+<section class="main" >
+    <div>
+        <h2>Hello, I'm Jaouhar<br><span>Full Stack Apprenant</span></h2>
+        <h3>Pour l'instant y a rien </h3>
+        <a href="#prjects" class="main-btn">View my work</a>
+        <div class="social-icons">
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-github"></i></a>
+        </div>
+    </div>
+</section>
+
+<section class="cards" id="services">
+    <h2 class="title">Services</h2>
+    <div class="content">
+        <div class="card">
+            <div class="icon">
+                <i class="fas fa-edit"></i>
+            </div>
+            <div class="info">
+                <h3>Script Writing </h3>
+                <p>pour linstant ya rien mais je vais rajouter qlq chose binetot </p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="icon">
+                <i class="fas fa-video"></i>
+            </div>
+            <div class="info">
+                <h3>Autres</h3>
+                <p> Vous trouvez ici mon CV </p>
+            </div>
+        </div>
+                <div class="card">
+            <div class="icon">
+                <i class="fas fa-graduation-cap"></i>
+            </div>
+            <div class="info">
+                <h3>CV</h3>
+                <p> Vous trouvez ici autres choses </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+    <section class="projects" id="projects">
+        <h2 class="title">Projects</h2>
+        <div class="content">
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="images/golang1.jpg" />
+                </div>
+                <div class="project-info">
+                    <p class="porject-category">golang & project </p>
+                    <strong class="project-title">
+                        <span>Groupie Tracker</span>
+                        <a href="#" class="more-details">More Details</a>
+                    </strong>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="images/golang1.jpg" />
+                </div>
+                <div class="project-info">
+                    <p class="porject-category">golang & project </p>
+                    <strong class="project-title">
+                        <span>Groupie Tracker</span>
+                        <a href="#" class="more-details">More Details</a>
+                    </strong>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="images/golang1.jpg" />
+                </div>
+                <div class="project-info">
+                    <p class="porject-category">golang & project </p>
+                    <strong class="project-title">
+                        <span>Groupie Tracker</span>
+                        <a href="#" class="more-details">More Details</a>
+                    </strong>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="images/golang1.jpg" />
+                </div>
+                <div class="project-info">
+                    <p class="porject-category">golang & project </p>
+                    <strong class="project-title">
+                        <span>Groupie Tracker</span>
+                        <a href="#" class="more-details">More Details</a>
+                    </strong>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="images/golang1.jpg" />
+                </div>
+                <div class="project-info">
+                    <p class="porject-category">golang & project </p>
+                    <strong class="project-title">
+                        <span>Groupie Tracker</span>
+                        <a href="#" class="more-details">More Details</a>
+                    </strong>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="images/golang1.jpg" />
+                </div>
+                <div class="project-info">
+                    <p class="porject-category">golang & project </p>
+                    <strong class="project-title">
+                        <span>Groupie Tracker</span>
+                        <a href="#" class="more-details">More Details</a>
+                    </strong>
+                </div>
+            </div>
+        </div>
+    </section>    
+
+<section class="cards contact" id="contact">
+    <h2 class="title">let's work together </h2>
+    <div class="content">
+        <div class="card">
+            <div class="icon">
+                <i class="fas fa-phone"></i>
+            </div>
+            <div class="info">
+                <h3>Phone </h3>
+                <p>0623691135 </p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="icon">
+                <i class="fas fa-envelope"></i>
+            </div>
+            <div class="info">
+                <h3>Email</h3>
+                <p> jaouhar76500@gmail.com </p>
+            </div>
+        </div>
+</section>
+<footer class="footer">
+    <p class="footer-title">Copyrights @ <span>Jaouhar Benromdhane</span></p>
+    <div class="social-icons">
+        <a href="#"><i class="fab fa-linkedin"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-github"></i></a>
+    </div>
+</footer>
 
 
 </body>
