--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div>
         <h2>Hello, I'm Jaouhar<br><span>Full Stack Apprenant</span></h2>
         <h3>Pour l'instant y a rien </h3>
-        <a href="#prjects" class="main-btn">View my work</a>
+        <a href="#projects"class="main-btn">View my work</a>
         <div class="social-icons">
             <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
