--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <h3>Pour l'instant y a rien </h3>
         <a href="#projects"class="main-btn">View my work</a>
         <div class="social-icons">
-            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/jaouhar-benromdhane-9629892a9/"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/Jaouhar-benromdhane"><i class="fab fa-github"></i></a>
         </div>
     </div>
 </section>
@@ -39,10 +39,10 @@
     <div class="content">
         <div class="card">
             <div class="icon">
-                <i class="fas fa-edit"></i>
+                <i class="fas fa-graduation-cap"></i>
             </div>
             <div class="info">
-                <h3>Script Writing </h3>
+                <h3>My School</h3>
                 <p>pour linstant ya rien mais je vais rajouter qlq chose binetot </p>
             </div>
         </div>
@@ -57,10 +57,10 @@
         </div>
                 <div class="card">
             <div class="icon">
-                <i class="fas fa-graduation-cap"></i>
+                <i class="fas fa-file"></i>
             </div>
             <div class="info">
-                <h3>CV</h3>
+                <h3>Mon CV</h3>
                 <p> Vous trouvez ici autres choses </p>
             </div>
         </div>
@@ -75,10 +75,10 @@
                     <img src="images/golang1.jpg" />
                 </div>
                 <div class="project-info">
-                    <p class="porject-category">golang & project </p>
+                    <p class="project-category">golang & project </p>
                     <strong class="project-title">
                         <span>Groupie Tracker</span>
-                        <a href="#" class="more-details">More Details</a>
+                        <a href="https://zone01normandie.org/git/tichane/groupie-tracker" class="more-details">More Details</a>
                     </strong>
                 </div>
             </div>
@@ -154,7 +154,7 @@
             </div>
             <div class="info">
                 <h3>Phone </h3>
-                <p>0623691135 </p>
+                <p>97408730 </p>
             </div>
         </div>
         <div class="card">
